package edu.fiuba.algo3.modelo.tablero;

import edu.fiuba.algo3.modelo.hexagonoStrategy.StrategyConLadron;
import edu.fiuba.algo3.modelo.hexagonoStrategy.StrategyHexagono;
import edu.fiuba.algo3.modelo.hexagonoStrategy.StrategySinLadron;
import edu.fiuba.algo3.modelo.terrenos.Terreno;
import java.util.ArrayList;
import java.util.HashSet;
import java.util.List;
import java.util.Set;

public class Hexagono {
    private final Terreno terreno;
    private final int numeroFicha;
    private final List<Arista> aristas;
    private final List<Vertice> vertices;
    private StrategyHexagono estrategiaActual;

    public Hexagono(Terreno terreno, int numeroFicha) {
        this.terreno = terreno;
        this.numeroFicha = numeroFicha;
        this.vertices = new ArrayList<>();
        this.aristas = new ArrayList<>();
        this.estrategiaActual = new StrategySinLadron();
    }

    public void ponerLadron() {
        this.estrategiaActual = new StrategyConLadron();
    }

    public void quitarLadron() {
        this.estrategiaActual = new StrategySinLadron();
    }

    public void agregarVertice(Vertice vertice) {
        if (!vertices.contains(vertice) && vertices.size() < 6) {
            vertices.add(vertice);
        }
    }

    public void agregarArista(Arista arista) {
        if (!aristas.contains(arista) && aristas.size() < 6) {
            aristas.add(arista);
        }
    }

    public void producirRecursos(int numero) {
        if (numero == this.numeroFicha) {
            estrategiaActual.producirRecursos(vertices, terreno);
        }
    }

    public void entregarRecursoInicialA(Vertice vertice) {
        if (vertices.contains(vertice)) {
            vertice.producirSegunTerreno(this.terreno);
        }
    }

    public void notificarLadron(Tablero tablero) {
        estrategiaActual.registrarEnTablero(tablero, this);
    }

    public String getTerreno() {
        return this.terreno.getTerreno();
    }

    public int getFicha() {
        return this.numeroFicha;
    }

    public List<Vertice> getVertices() {
        return this.vertices;
    }

    public List<Arista> getAristas() {
        return this.aristas;
    }

    public Set<Integer> getIdsJugadoresConConstruccion() {
        Set<Integer> idJugadores = new HashSet<>();
        for (Vertice vertice : vertices) {
            int idJugador = vertice.getIdPropietario();
            idJugadores.add(idJugador);
        }
        return idJugadores;
    }
}
