@startuml

class Tablero {
  - hexagonos: List<Hexagono>
  - hexagonoOcupadoLadron: Hexagono
  - vertices: List<Vertice>
  - aristas: List<Arista>
  
  + producir(int): void
  + darRecursosIniciales(Vertice): void
  - inicializarLadron(): void
  + registrarHexagonoConLadron(Hexagono): void
  + moverLadronA(Hexagono): void
  - dfsMasLarga(Arista, Set<Arista>, Map): int
  - dfsAux(Arista, Set<Arista>, Map): int
  + conseguirRutaMasLarga(Jugador): int
  + getHexagonos(): List<Hexagono>
  + getVertices(): Map<Integer, Vertice>
  + getAristas(): Map<Integer, Arista>
  + getListaAristas(): List<Arista>
}

class Hexagono {
  - terreno: Terreno
  - numeroFicha: int
  - aristas: List<Arista>
  - vertices: List<Vertice>
  - estrategiaActual: StrategyHexagono
  
  + ponerLadron(): void
  + quitarLadron(): void
  + agregarVertice(Vertice): void
  + agregarArista(Arista): void
  + producirRecursos(int): void
  + entregarRecursoInicialA(Vertice): void
  + notificarLadron(Tablero): void
  + getIdsJugadoresConConstruccion(): Set<Integer>
  + getTerreno(): String
  + getFicha(): int
  + getVertices(): List<Vertice>
  + getAristas(): List<Arista>
}

class Vertice {
  - id: int
  - construccion: Construccion
  - vecinos: List<Vertice>
  - aristas: List<Arista>
  - puerto: ComercioPuerto
  
  + agregarVecino(Vertice): void
  + agregarArista(Arista): void
  + asignarPuerto(ComercioPuerto): void
  + construirPoblado(Jugador, Construccion): void
  + construirPobladoPrimerasColocaciones(Jugador, Poblado): void
  + construirCiudad(Jugador, Construccion): void
  + construirCarretera(Jugador, Construccion): void
  + producirSegunTerreno(Terreno): void
  - validarReglaDistancia(): void
  + validarConstruccionesProximas(Jugador): boolean
  + validarCarreterasProximas(Jugador): boolean
  + validarConstruccionesActualYProximas(Jugador): boolean
  + ejecutarComercio(Jugador, List<Recurso>, List<Recurso>): void
  + getIdPropietario(): int
  + setId(int): void
  + getId(): int
  + getAristas(): List<Arista>
  + getPuerto(): ComercioPuerto
}

class Arista {
  - id: int
  - vertice1: Vertice
  - vertice2: Vertice
  - construccion: Construccion
  - propietario: Jugador
  
  + conectaVertices(Vertice, Vertice): boolean
  + construirPoblado(Jugador, Construccion): void
  + construirCiudad(Jugador, Construccion): void
  + construirCarretera(Jugador, Construccion): void
  + construirCarreteraPrimerasColocaciones(Jugador, Carretera): void
  + validarCarreteraPropia(Jugador): boolean
  + setId(int): void
  + getId(): int
  + getVertice1(): Vertice
  + getVertice2(): Vertice
}

interface EspacioConstruible {
  + construirPoblado(Jugador, Construccion): void
  + construirCiudad(Jugador, Construccion): void
  + construirCarretera(Jugador, Construccion): void
}

interface StrategyHexagono {
  + producirRecursos(List<Vertice>, Terreno): void
  + registrarEnTablero(Tablero, Hexagono): void
}

class StrategyConLadron {
  + producirRecursos(List<Vertice>, Terreno): void
  + registrarEnTablero(Tablero, Hexagono): void
}

class StrategySinLadron {
  + producirRecursos(List<Vertice>, Terreno): void
  + registrarEnTablero(Tablero, Hexagono): void
}

interface TableroFactory {
  + crearTablero(): Tablero
}

class TableroCatanFactory {
  - verticesPuertoGenerico: List<Vertice>
  - verticesPuertoEspecial: List<Vertice>
  - todosLosVertices: List<Vertice>
  
  + crearTablero(): Tablero
  - construirTablero(List<Terreno>, List<Integer>): Tablero
  - inicializarVertices(): List<Vertice>
  - conectarAristas(List<Hexagono>): List<Arista>
  - asignarPuertos(): void
  + crearHexagonos(List<Terreno>, List<Integer>): List<Hexagono>
  + generarTerrenosAleatorios(): List<Terreno>
  + generarFichasAleatorias(): List<Integer>
}

class VerticeCatan {
  - todosLosVertices: List<Vertice>
  
  + asignarVertices(List<Hexagono>): void
  + identificarVerticesPuertoGenerico(): List<Vertice>
  + identificarVerticesPuertoEspecial(): List<Vertice>
}

Tablero --> "19" Hexagono
Hexagono --> "6" Vertice
Hexagono --> "6" Arista
Hexagono --> Terreno
Hexagono --> StrategyHexagono

Vertice ..|> EspacioConstruible
Arista ..|> EspacioConstruible
Vertice --> "1" Construccion
Arista --> "1" Construccion
Vertice --> "0..*" Vertice : vecinos
Vertice --> "0..*" Arista
Vertice --> ComercioPuerto

StrategyConLadron ..|> StrategyHexagono
StrategySinLadron ..|> StrategyHexagono

TableroCatanFactory ..|> TableroFactory
TableroCatanFactory --> Tablero
TableroCatanFactory --> VerticeCatan

@enduml